[package]
name = "emu-audio"
version = "0.1.2"
authors = ["ferris <jake@fusetools.com>"]
description = "Standalone audio package for the emu project."
homepage = "https://github.com/emu-rs/emu"
repository = "https://github.com/emu-rs/emu-audio"
keywords = ["emu", "emulator", "audio"]
license = "BSD-2-Clause"

[dependencies]
emu-audio-types = "0.1.0"
emu-core-audio-driver = "0.1.3"
